--- a/CookBook/locales/ru.json
+++ b/CookBook/locales/ru.json
@@ -10,7 +10,8 @@
     "errors": {
       "invalidCredentials": "Неверный email или пароль",
       "loginFailed": "Ошибка входа",
-      "invalidEmail": "Пожалуйста, напишите правильный емейл."
+      "invalidEmail": "Пожалуйста, напишите правильный емейл.",
+      "couldntUploadRecipes": "Не удалось загрузить рецепты. Пожалуйста, повторите попытку позже."
     }
   },
   "profile": {
