add settings screen

--- a/CookBook/localization/locales/en.json
+++ b/CookBook/localization/locales/en.json
@@ -18,7 +18,8 @@
     "title": "Profile",
     "loading": "Loading Profile...",
     "logout": "Logout",
-    "listOfRecipes": "List of recipes"
+    "listOfRecipes": "List of recipes",
+    "settings": "Settings"
   },
   "common": {
     "search": "Search",
