--- a/CookBook/localization/locales/ru.json
+++ b/CookBook/localization/locales/ru.json
@@ -18,7 +18,8 @@
     "title": "Профиль",
     "loading": "Загрузка профиля...",
     "logout": "Выйти",
-    "listOfRecipes": "Список рецептов"
+    "listOfRecipes": "Список рецептов",
+    "settings": "Настройки"
   },
   "common": {
     "search": "Поиск",
