--- a/CookBook/localization/locales/ru.json
+++ b/CookBook/localization/locales/ru.json
@@ -19,11 +19,20 @@
     "loading": "Загрузка профиля...",
     "logout": "Выйти",
     "listOfRecipes": "Список рецептов",
-    "settings": "Настройки"
+    "settings": "Настройки",
+    "mainProfile": "Это ваш главный профиль в приложении."
   },
   "common": {
     "search": "Поиск",
     "loading": "Загрузка...",
     "error": "Ошибка"
+  },
+  "settings": {
+    "settings": "Настройки",
+    "manageAccText": "Управляйте вашим аккаунтом и приложением",
+    "quit": "Выход из системы",
+    "actionQuit": "Это действие завершит вашу текущую сессию.",
+    "language": "Язык",
+    "chooseLanguage": "Выберите предпочитаемый язык интерфейса."
   }
 }
