add settings screen and change ui profile

--- a/CookBook/localization/locales/ru.json
+++ b/CookBook/localization/locales/ru.json
@@ -17,11 +17,24 @@
   "profile": {
     "title": "Профиль",
     "loading": "Загрузка профиля...",
-    "logout": "Выйти"
+    "logout": "Выйти",
+    "listOfRecipes": "Список рецептов",
+    "settings": "Настройки",
+    "mainProfile": "Это ваш главный профиль в приложении."
   },
   "common": {
     "search": "Поиск",
     "loading": "Загрузка...",
     "error": "Ошибка"
+  },
+  "settings": {
+    "settings": "Настройки",
+    "manageAccText": "Управляйте вашим аккаунтом и приложением",
+    "quit": "Выход из системы",
+    "actionQuit": "Это действие завершит вашу текущую сессию.",
+    "language": "Язык",
+    "chooseLanguage": "Выберите предпочитаемый язык интерфейса.",
+    "notification": "Уведомления",
+    "enableNotification": "Уведомления включить/выключить"
   }
 }
